@@ -7,6 +7,7 @@ omit bug fixes.
 The items are sorted inversely, i.e. lastest items are on top
 
 --------------------------------------------------------------------------
+* made Cop.addParameter methods public
 * add PropertiesServlet
 * add BodySender to public API
 * bugfix: look for resources in super classes of the servlet
